force-app/main/default/objects/Penny_Interaction_Log__c/Penny_Interaction_Log__c.object-meta.xml
<CustomObject>
    <label>Penny Interaction Log</label>
    <nameField>
        <displayFormat>PIL-{0000}</displayFormat>
        <label>Penny Interaction Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Penny Interaction Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>