force-app/main/default/objects/Penny_Interaction_Log__c/fields/Penny_Response__c.field-meta.xml
<CustomField>
    <fullName>Penny_Response__c</fullName>
    <label>Penny Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>