force-app/main/default/objects/Penny_Interaction_Log__c/fields/Prompt_Mode__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Mode__c</fullName>
    <label>Prompt Mode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>