force-app/main/default/objects/Penny_Interaction_Log__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>slack_dm</fullName>
            </value>
            <value>
                <fullName>slack_mention</fullName>
            </value>
            <value>
                <fullName>mobile</fullName>
            </value>
            <value>
                <fullName>dashboard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>