force-app/main/default/objects/Penny_Interaction_Log__c/validationRules/Penny_Response_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Penny_Response_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Penny_Response__c )</errorConditionFormula>
    <errorDisplayField>Penny_Response__c</errorDisplayField>
    <errorMessage>Penny response is required.</errorMessage>
</ValidationRule>