force-app/main/default/objects/Penny_Interaction_Log__c/validationRules/User_Message_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>User_Message_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(User_Message__c)</errorConditionFormula>
    <errorDisplayField>User_Message__c</errorDisplayField>
    <errorMessage>User Message is required</errorMessage>
</ValidationRule>